cambio en index nuevamente

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav>
            
       <ul> 
-        <li><a href="Acercade.html">Acerca de todos nosotros</a></li>
+        <li><a href="Acercade.html">Acerca de</a></li>
       </ul>
     </nav>
 
