cambio ruta foto

--- a/Acercade.html
+++ b/Acercade.html
@@ -31,7 +31,7 @@
     </article>
       
       <figure>
-      <img src="mifoto.jpeg" alt="Mi foto" title="Retrato, yo siendo feliz">
+      <img src="img/mifoto.jpeg" alt="Mi foto" title="Retrato, yo siendo feliz">
       <figcaption>"Mi foto"</figcaption>
       </figure>
      
