<a> agregue target="blank" --<img> cambio de foto --

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav>
            
       <ul> 
-        <li><a href="Acercade.html">Acerca de</a></li>
+        <li><a href="Acercade.html" target="_blank">Acerca de</a></li>
       </ul>
     </nav>
 
@@ -22,21 +22,23 @@
     <section>
 
       <h2>Sobre mí</h2>
-      <p>Soy  una alumna que esta cursando la materia Programación Estática y Laboratorio Web .</p>
+      <p>Soy alumna de la Tecnicatura Desarrollo Web que actualmente  esta cursando la materia
+       Programación Estática y Laboratorio Web .
+      </p>
     
     </section>
 
     <section>
   
       <h3>Contacto</h3>
-      <p>Podes contactarme en: <a href="malali.moreno@gmail.com">Mi@correo.com</a></p>
+      <p>Podes contactarme en: <a href="mailto:malali.moreno@gmail.com">Mi@correo.com</a></p>
     </section>
   
   </main>
 
 <footer>
   &copy; 2025 Magalí Moreno - Todos los derechos reservados<br>
-  Monseñor Esandi y Ayacucho <br >
+  Monseñor Esandi y Ayacucho <br>
   8500 – Viedma, Río Negro, Argentina
 </footer>
 
